| 2.5.0   | add both support to PHP 5.4.4 and 5.3.14
| 2.4.0   | add both support to PHP 5.4.3 and 5.3.13
| 2.3.0   | add support to PHP 5.4.0, 5.4.1, 5.4.2 and 5.3.10, 5.3.11, 5.3.12
| 2.2.0   | all PHP versions until 5.3.9
| 2.1.0   | all PHP versions until 5.3.8
|===========================


== Version 2.21.0 _(2013-08-17)_

.Additions and changes:
* update mongo reference to 1.4.3

.Bug fixes:
* request #98 fixed mongo, sockets and standard references (thanks to Remi Collet)
* GH-97: False positive classMemberAccessOnInstantiation detection


== Version 2.20.0 _(2013-07-20)_

.Additions and changes:
* add support to PHP 5.5.1
* update session and intl references sync with PHP 5.5.1

.Bug fixes:
* none


== Version 2.19.0 _(2013-07-11)_

.Additions and changes:
* update xcache reference to 3.0.3

.Bug fixes:
* none


== Version 2.18.0 _(2013-06-24)_

.Additions and changes:
* first release that support final stable version of PHP 5.5
* update xcache reference to 3.0.2
* update http reference to 1.7.6

.Bug fixes:
* none


== Version 2.17.0 _(2013-06-06)_

.Additions and changes:
* update xdebug reference to 2.2.3
* update xhprof reference to 0.9.3
* update libevent reference to 0.1.0
* update amqp reference to 1.2.0
* update gender reference to 1.0.0
* update intl reference to 3.0.0
* update mongo reference to 1.4.1
* update zendopcache reference to 7.0.2
* phar version of CLI tools
* CLI tools phpci is renamed to phpcompatinfo to avoid name conflict with http://www.phptesting.org/

.Bug fixes:
* extension Zend OPcache is not displayed in list-references


== Version 2.16.0 _(2013-05-09)_

.Additions and changes:
* add 9 new extensions: APCu, gender, haru, http, libevent, msgpack, pthreads, stomp, uploadprogress
* update amqp reference to 1.0.10
* the default reference option is now ALL instead of PHP5

.Bug fixes:
* none


== Version 2.15.0 _(2013-04-11)_

.Additions and changes:
* new extension Zend Opcache (contribution by Remi Collet)